--- a/blog.html
+++ b/blog.html
@@ -166,8 +166,8 @@
 					</div>
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-							<img class="img-responsive" src="images/img_bg_1.jpg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
-							<p class="fh5co-lead"><br>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+							<img class="img-responsive" src="https://i.imgur.com/VMukZIq.png" alt="a la tache 3 thingy">
+							<p class="fh5co-lead"></p>
 									</div>
 						</div>
 						
